cabal-version:       2.4
name:                unlift
version:             0.0.0.0
synopsis:            Typeclass for monads that can be unlifted to arbitrary base monads
description:
    Typeclass for monads that can be unlifted to arbitrary base monads.
    See [README.md](https://github.com/kowainik/unlift#unlift) for more details.
homepage:            https://github.com/kowainik/unlift
bug-reports:         https://github.com/kowainik/unlift/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2021 Kowainik
category:            Typeclass, Monad, Unlift, Control
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4
                     GHC == 8.10.4
                     GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/unlift.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 4.16

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:       stm ^>= 2.5
                     , transformers-base ^>= 0.4.5
                     , transformers ^>= 0.5
  exposed-modules:     Unlift
